Added record accumulator integration test to check hashing. Added record classes/structs to lib export.

--- a/moja.modules.cbm/tests/CMakeLists.txt
+++ b/moja.modules.cbm/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SRCS
     src/smoothertests.cpp
     src/volumetobiomasscarbongrowthtests.cpp
     src/recordaccumulatortests.cpp
+    src/recordaccumulatorintegrationtests.cpp
 )
 
 add_definitions(-DBOOST_ALL_DYN_LINK)
