Implemented land class transitions - PEI now matches CBM3 within 99.99%.

--- a/moja.modules.cbm/CMakeLists.txt
+++ b/moja.modules.cbm/CMakeLists.txt
@@ -27,6 +27,7 @@ set(MOJA_CBM_HEADERS
     include/moja/modules/${PACKAGE}/cbmbuildlandunitmodule.h
     include/moja/modules/${PACKAGE}/cbmdecaymodule.h
     include/moja/modules/${PACKAGE}/cbmdisturbanceeventmodule.h
+    include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
     include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
     include/moja/modules/${PACKAGE}/cbmsequencer.h
     include/moja/modules/${PACKAGE}/cbmspinupdisturbancemodule.h
@@ -61,6 +62,7 @@ set(MOJA_CBM_SOURCES
     src/cbmbuildlandunitmodule.cpp
     src/cbmdecaymodule.cpp
     src/cbmdisturbanceeventmodule.cpp
+    src/cbmlandclasstransitionmodule.cpp
     src/cbmlandunitdatatransform.cpp
     src/cbmsequencer.cpp
     src/cbmspinupdisturbancemodule.cpp
