Added TBB debug libraries to CMakeLists.txt

--- a/moja.modules.cbm/CMakeLists.txt
+++ b/moja.modules.cbm/CMakeLists.txt
@@ -109,7 +109,8 @@ target_link_libraries(
 	${Poco_FOUNDATION} 
 	${Poco_DATA} 
 	${Poco_DATA_SQLITE}
-    ${TBB_LIBRARIES})
+    ${TBB_LIBRARIES}
+    ${TBB_DEBUG_LIBRARIES})
 
 # Set local include path
 include_directories(${Poco_INCLUDE_DIRS})
