Updated event handler to enable update the transfer rate at runtime Added classes for peatland modules

--- a/moja.modules.cbm/CMakeLists.txt
+++ b/moja.modules.cbm/CMakeLists.txt
@@ -61,7 +61,20 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/mossgrowthmodule.h
 	include/moja/modules/${PACKAGE}/mossturnovermodule.h
 	include/moja/modules/${PACKAGE}/mossdecaymodule.h	
+	include/moja/modules/${PACKAGE}/mossdisturbancemodule.h
 	include/moja/modules/${PACKAGE}/standgrowthcurvefactory.h
+	include/moja/modules/${PACKAGE}/peatlandgrowthmodule.h
+	include/moja/modules/${PACKAGE}/peatlandparameters.h
+	include/moja/modules/${PACKAGE}/peatlandgrowthparameters.h
+	include/moja/modules/${PACKAGE}/peatlandturnoverparameters.h
+	include/moja/modules/${PACKAGE}/peatlanddecayparameters.h	
+	include/moja/modules/${PACKAGE}/peatlandgrowthcurve.h
+	include/moja/modules/${PACKAGE}/peatlandturnovermodule.h
+	include/moja/modules/${PACKAGE}/peatlanddecaymodule.h
+	include/moja/modules/${PACKAGE}/peatlanddisturbancemodule.h
+	include/moja/modules/${PACKAGE}/peatlandfireparameters.h
+	include/moja/modules/${PACKAGE}/peatlandpreparemodule.h
+	include/moja/modules/${PACKAGE}/printpools.h	
 )
 
 set(MOJA_CBM_SOURCES
@@ -95,7 +108,20 @@ set(MOJA_CBM_SOURCES
 	src/mossgrowthmodule.cpp
 	src/mossturnovermodule.cpp
 	src/mossdecaymodule.cpp
+	src/mossdisturbancemodule.cpp
 	src/standgrowthcurvefactory.cpp	
+	src/peatlandgrowthmodule.cpp	
+	src/peatlandparameters.cpp	
+	src/peatlandgrowthparameters.cpp	
+	src/peatlandturnoverparameters.cpp
+	src/peatlanddecayparameters.cpp		
+	src/peatlandgrowthcurve.cpp
+	src/peatlandturnovermodule.cpp
+	src/peatlanddecaymodule.cpp
+	src/peatlanddisturbancemodule.cpp
+	src/peatlandfireparameters.cpp
+	src/peatlandpreparemodule.cpp
+	src/printpools.cpp
 )
 
 set(SRCS_CBM ${MOJA_CBM_SOURCES} ${MOJA_CBM_HEADERS})
