Lots of changes around library manager. +renamed modulefactory to libraryfactory as it does modules/transforms/flintdata (M/T/F) +wrapped flint level modules/transforms/flintdata in libraryfactory +cleaned up the use of handles to M/T/F by wrapping in structure (FlintLibraryHandles)

--- a/moja.modules.cbm/CMakeLists.txt
+++ b/moja.modules.cbm/CMakeLists.txt
@@ -20,10 +20,10 @@ configure_file(../../templates/exports.h ${CMAKE_CURRENT_SOURCE_DIR}/include/moj
 
 set(MOJA_MODULES_HEADERS
     include/moja/modules/${PACKAGE}/_modules.${PACKAGE}_exports.h
-    include/moja/modules/${PACKAGE}/modulefactory.h)
+    include/moja/modules/${PACKAGE}/libraryfactory.h)
 
 set(MOJA_MODULES_SOURCES
-    src/modulefactory.cpp)
+    src/libraryfactory.cpp)
 
 set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/rootbiomassequation.h
