small fix for linux TBB build, don't have debug libs on Docker at the moment

--- a/moja.modules.cbm/CMakeLists.txt
+++ b/moja.modules.cbm/CMakeLists.txt
@@ -10,10 +10,15 @@ endif()
 find_package(TBB)
 if(TBB_FOUND)
 	include_directories(${TBB_INCLUDE_DIRS})
+	if(CMAKE_SYSTEM MATCHES "Windows")
+		set( TBB_TBB_LIBRARY debug     ${TBB_tbb_LIBRARY_DEBUG}
+							 optimized ${TBB_tbb_LIBRARY_RELEASE}
+						CACHE STRING "TBB library text")
+	endif() 
 
-	set( TBB_TBB_LIBRARY debug     ${TBB_tbb_LIBRARY_DEBUG}
-						 optimized ${TBB_tbb_LIBRARY_RELEASE}
-					CACHE STRING "TBB library text")
+	if (CMAKE_SYSTEM MATCHES "Linux" )
+		set( TBB_TBB_LIBRARY ${TBB_tbb_LIBRARY_RELEASE})
+	endif() 
 endif()
 
 # HEADERS AND SOURCE
