--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -6,7 +6,8 @@ string(TOUPPER "${PACKAGE}" LIBNAME_EXPORT)
 
 include_directories(include)
 
-configure_file(../templates/exports.h ${CMAKE_CURRENT_SOURCE_DIR}/include/moja/modules/${PACKAGE}/_modules.${PACKAGE}_exports.h)
+configure_file(../templates/exports.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/include/moja/modules/${PACKAGE}/_modules.${PACKAGE}_exports.h)
 
 set(MOJA_MODULES_HEADERS
     include/moja/modules/${PACKAGE}/_modules.${PACKAGE}_exports.h
@@ -16,8 +17,6 @@ set(MOJA_MODULES_SOURCES
     src/libraryfactory.cpp)
 
 set(MOJA_CBM_HEADERS
-	include/moja/modules/${PACKAGE}/rootbiomassequation.h
-	include/moja/modules/${PACKAGE}/standcomponent.h
 	include/moja/modules/${PACKAGE}/abovegroundbiomasscarbonincrement.h
 	include/moja/modules/${PACKAGE}/cbmaggregatorlandunitdata.h
     include/moja/modules/${PACKAGE}/cbmaggregatorsqlitewriter.h
@@ -25,50 +24,53 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/cbmdecaymodule.h
 	include/moja/modules/${PACKAGE}/cbmdisturbanceeventmodule.h
     include/moja/modules/${PACKAGE}/cbmtransitionrulesmodule.h
+	include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
 	include/moja/modules/${PACKAGE}/cbmsequencer.h
 	include/moja/modules/${PACKAGE}/cbmspinupdisturbancemodule.h
 	include/moja/modules/${PACKAGE}/cbmspinupsequencer.h
 	include/moja/modules/${PACKAGE}/componentbiomasscarboncurve.h
+	include/moja/modules/${PACKAGE}/esgymmodule.h
+	include/moja/modules/${PACKAGE}/esgymspinupsequencer.h
+	include/moja/modules/${PACKAGE}/foresttypeconfiguration.h	
 	include/moja/modules/${PACKAGE}/growthcurvetransform.h
+	include/moja/modules/${PACKAGE}/growthmultipliermodule.h
 	include/moja/modules/${PACKAGE}/helper.h
 	include/moja/modules/${PACKAGE}/lmeval.h
 	include/moja/modules/${PACKAGE}/lmmin.h
+	include/moja/modules/${PACKAGE}/mossdecaymodule.h	
+	include/moja/modules/${PACKAGE}/mossdisturbancemodule.h
+	include/moja/modules/${PACKAGE}/mossgrowthmodule.h
+	include/moja/modules/${PACKAGE}/mossturnovermodule.h
 	include/moja/modules/${PACKAGE}/outputerstreamfluxpostnotify.h
 	include/moja/modules/${PACKAGE}/outputerstreampostnotify.h
+	include/moja/modules/${PACKAGE}/peatlandaftercbmmodule.h
+	include/moja/modules/${PACKAGE}/peatlanddecaymodule.h
+	include/moja/modules/${PACKAGE}/peatlanddecayparameters.h	
+	include/moja/modules/${PACKAGE}/peatlanddisturbancemodule.h
+	include/moja/modules/${PACKAGE}/peatlandfireparameters.h
+	include/moja/modules/${PACKAGE}/peatlandgrowthcurve.h
+	include/moja/modules/${PACKAGE}/peatlandgrowthmodule.h
+	include/moja/modules/${PACKAGE}/peatlandgrowthparameters.h
+	include/moja/modules/${PACKAGE}/peatlandparameters.h
+	include/moja/modules/${PACKAGE}/peatlandpreparemodule.h
+	include/moja/modules/${PACKAGE}/peatlandturnoverparameters.h
+	include/moja/modules/${PACKAGE}/peatlandturnovermodule.h
 	include/moja/modules/${PACKAGE}/perdfactor.h
+	include/moja/modules/${PACKAGE}/printpools.h	
 	include/moja/modules/${PACKAGE}/record.h
 	include/moja/modules/${PACKAGE}/rootbiomasscarbonincrement.h
+	include/moja/modules/${PACKAGE}/rootbiomassequation.h
 	include/moja/modules/${PACKAGE}/smoother.h
 	include/moja/modules/${PACKAGE}/standbiomasscarboncurve.h
+	include/moja/modules/${PACKAGE}/standcomponent.h
 	include/moja/modules/${PACKAGE}/standgrowthcurve.h
+	include/moja/modules/${PACKAGE}/standgrowthcurvefactory.h
 	include/moja/modules/${PACKAGE}/treespecies.h
 	include/moja/modules/${PACKAGE}/treeyieldtable.h
 	include/moja/modules/${PACKAGE}/volumetobiomasscarbongrowth.h
 	include/moja/modules/${PACKAGE}/volumetobiomassconverter.h
 	include/moja/modules/${PACKAGE}/yieldtablegrowthmodule.h
-	include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
-	include/moja/modules/${PACKAGE}/foresttypeconfiguration.h	
-	include/moja/modules/${PACKAGE}/mossgrowthmodule.h
-	include/moja/modules/${PACKAGE}/mossturnovermodule.h
-	include/moja/modules/${PACKAGE}/mossdecaymodule.h	
-	include/moja/modules/${PACKAGE}/mossdisturbancemodule.h
-	include/moja/modules/${PACKAGE}/standgrowthcurvefactory.h
-	include/moja/modules/${PACKAGE}/esgymmodule.h
-	include/moja/modules/${PACKAGE}/peatlandgrowthmodule.h
-	include/moja/modules/${PACKAGE}/peatlandparameters.h
-	include/moja/modules/${PACKAGE}/peatlandgrowthparameters.h
-	include/moja/modules/${PACKAGE}/peatlandturnoverparameters.h
-	include/moja/modules/${PACKAGE}/peatlanddecayparameters.h	
-	include/moja/modules/${PACKAGE}/peatlandgrowthcurve.h
-	include/moja/modules/${PACKAGE}/peatlandturnovermodule.h
-	include/moja/modules/${PACKAGE}/peatlanddecaymodule.h
-	include/moja/modules/${PACKAGE}/peatlanddisturbancemodule.h
-	include/moja/modules/${PACKAGE}/peatlandfireparameters.h
-	include/moja/modules/${PACKAGE}/peatlandpreparemodule.h
-	include/moja/modules/${PACKAGE}/printpools.h	
-	include/moja/modules/${PACKAGE}/esgymspinupsequencer.h
-	include/moja/modules/${PACKAGE}/peatlandaftercbmmodule.h
 )
 
 set(MOJA_CBM_SOURCES
@@ -77,49 +79,50 @@ set(MOJA_CBM_SOURCES
 	src/cbmbuildlandunitmodule.cpp
 	src/cbmdecaymodule.cpp
 	src/cbmdisturbanceeventmodule.cpp
+    src/cbmlandclasstransitionmodule.cpp
 	src/cbmlandunitdatatransform.cpp
 	src/cbmsequencer.cpp
 	src/cbmspinupdisturbancemodule.cpp
 	src/cbmspinupsequencer.cpp
     src/cbmtransitionrulesmodule.cpp
 	src/componentbiomasscarboncurve.cpp
+	src/esgymmodule.cpp
+	src/esgymspinupsequencer.cpp
 	src/growthcurvetransform.cpp
+    src/growthmultipliermodule.cpp
 	src/lmeval.cpp
 	src/lmmin.cpp
+	src/mossdecaymodule.cpp
+	src/mossdisturbancemodule.cpp
+	src/mossgrowthmodule.cpp
+	src/mossturnovermodule.cpp
 	src/outputerstreamfluxpostnotify.cpp
 	src/outputerstreampostnotify.cpp
+	src/peatlandaftercbmmodule.cpp
+	src/peatlanddecaymodule.cpp
+	src/peatlanddecayparameters.cpp		
+	src/peatlanddisturbancemodule.cpp
+	src/peatlandfireparameters.cpp
+	src/peatlandgrowthcurve.cpp
+	src/peatlandgrowthmodule.cpp	
+	src/peatlandgrowthparameters.cpp	
+	src/peatlandparameters.cpp	
+	src/peatlandpreparemodule.cpp
+	src/peatlandturnovermodule.cpp
+	src/peatlandturnoverparameters.cpp
 	src/perdfactor.cpp
+	src/printpools.cpp
 	src/record.cpp
 	src/smoother.cpp
 	src/standbiomasscarboncurve.cpp
+    src/standcomponent.cpp	
 	src/standgrowthcurve.cpp
+	src/standgrowthcurvefactory.cpp	
 	src/treespecies.cpp
 	src/treeyieldtable.cpp
 	src/volumetobiomasscarbongrowth.cpp
 	src/volumetobiomassconverter.cpp
 	src/yieldtablegrowthmodule.cpp
-    src/cbmlandclasstransitionmodule.cpp
-    src/standcomponent.cpp	
-	src/mossgrowthmodule.cpp
-	src/mossturnovermodule.cpp
-	src/mossdecaymodule.cpp
-	src/mossdisturbancemodule.cpp
-	src/standgrowthcurvefactory.cpp	
-	src/esgymmodule.cpp
-	src/peatlandgrowthmodule.cpp	
-	src/peatlandparameters.cpp	
-	src/peatlandgrowthparameters.cpp	
-	src/peatlandturnoverparameters.cpp
-	src/peatlanddecayparameters.cpp		
-	src/peatlandgrowthcurve.cpp
-	src/peatlandturnovermodule.cpp
-	src/peatlanddecaymodule.cpp
-	src/peatlanddisturbancemodule.cpp
-	src/peatlandfireparameters.cpp
-	src/peatlandpreparemodule.cpp
-	src/printpools.cpp
-	src/esgymspinupsequencer.cpp
-	src/peatlandaftercbmmodule.cpp
 )
 
 set(SRCS_CBM ${MOJA_CBM_SOURCES} ${MOJA_CBM_HEADERS})
