Tried to improve error reporting - should now see some extra moja_debug.log file entries from the spinup module, as well as two new tables in the output database:
ErrorDimension - error message, originating module
LocationErrorDimension - associates locations with unique error messages (no timestep information at the moment)

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -26,6 +26,7 @@ set(MOJA_CBM_HEADERS
     include/moja/modules/${PACKAGE}/cbmtransitionrulesmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
+	include/moja/modules/${PACKAGE}/cbmmodulebase.h
 	include/moja/modules/${PACKAGE}/cbmsequencer.h
 	include/moja/modules/${PACKAGE}/cbmspinupdisturbancemodule.h
 	include/moja/modules/${PACKAGE}/cbmspinupsequencer.h
