Separated disturbance event loading and detection into a separate module from actually applying the matrix to allow more flexibility in scheduling.

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -25,6 +25,7 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/cbmbuildlandunitmodule.h
 	include/moja/modules/${PACKAGE}/cbmdecaymodule.h
 	include/moja/modules/${PACKAGE}/cbmdisturbanceeventmodule.h
+    include/moja/modules/${PACKAGE}/cbmdisturbancelistener.h
     include/moja/modules/${PACKAGE}/cbmtransitionrulesmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandclasstransitionmodule.h
 	include/moja/modules/${PACKAGE}/cbmlandunitdatatransform.h
@@ -84,6 +85,7 @@ set(MOJA_CBM_SOURCES
 	src/cbmbuildlandunitmodule.cpp
 	src/cbmdecaymodule.cpp
 	src/cbmdisturbanceeventmodule.cpp
+    src/cbmdisturbancelistener.cpp
     src/cbmlandclasstransitionmodule.cpp
 	src/cbmlandunitdatatransform.cpp
 	src/cbmsequencer.cpp
