Separated Sawtooth module from the rest of moja.modules.cbm so that it can more easily be disabled - does not currently build under Linux.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -10,7 +10,7 @@ set(${CMAKE_PROJECT_NAME}_COMPONENTS "")
 
 # Allow enabling and disabling components.
 option(ENABLE_MOJA.MODULES.CBM "moja.modules.cbm" ON)
-option(ENABLE_SAWTOOTH "sawtooth" ON)
+option(ENABLE_SAWTOOTH "sawtooth" OFF)
 
 # Put the libaries and binaries that get built into directories at the
 # top of the build tree rather than in hard-to-find leaf directories.
@@ -116,6 +116,8 @@ endif()
 if(ENABLE_SAWTOOTH)
     add_subdirectory(sawtooth)
     list(APPEND ${CMAKE_PROJECT_NAME}_COMPONENTS "sawtooth")
+	add_subdirectory(moja.modules.sawtooth)
+	list(APPEND ${CMAKE_PROJECT_NAME}_COMPONENTS "moja.modules.sawtooth")
 endif()
 
 
