--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -4,9 +4,7 @@ string(TOUPPER "${PACKAGE}" LIBNAME_EXPORT)
 
 # HEADERS AND SOURCE
 
-include_directories(include
-    ${PROJECT_SOURCE_DIR}/sawtooth)
-
+include_directories(include)
 configure_file(../templates/exports.h
                ${CMAKE_CURRENT_SOURCE_DIR}/include/moja/modules/${PACKAGE}/_modules.${PACKAGE}_exports.h)
 
@@ -75,7 +73,6 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/volumetobiomasscarbongrowth.h
 	include/moja/modules/${PACKAGE}/volumetobiomassconverter.h
 	include/moja/modules/${PACKAGE}/yieldtablegrowthmodule.h
-    include/moja/modules/${PACKAGE}/sawtoothmodule.h
 	include/moja/modules/${PACKAGE}/smalltreegrowthmodule.h
 	include/moja/modules/${PACKAGE}/smalltreegrowthcurve.h
 	include/moja/modules/${PACKAGE}/peatlandspinupnext.h
@@ -133,17 +130,15 @@ set(MOJA_CBM_SOURCES
 	src/volumetobiomasscarbongrowth.cpp
 	src/volumetobiomassconverter.cpp
 	src/yieldtablegrowthmodule.cpp
-    src/sawtoothmodule.cpp
 	src/smalltreegrowthmodule.cpp
 	src/smalltreegrowthcurve.cpp
 	src/peatlandspinupnext.cpp
 )
 
 set(SRCS_CBM ${MOJA_CBM_SOURCES} ${MOJA_CBM_HEADERS})
-set(SRCS_SAWTOOTH ${SRCS_SAWTOOTH})
 set(SRCS ${MOJA_MODULES_SOURCES} ${MOJA_MODULES_HEADERS} )
 
-add_library(${LIBNAME} ${LIB_MODE} ${SRCS} ${SRCS_CBM} ${SRCS_SAWTOOTH})
+add_library(${LIBNAME} ${LIB_MODE} ${SRCS} ${SRCS_CBM})
 
 set_target_properties(${LIBNAME} 
     PROPERTIES
@@ -159,9 +154,7 @@ target_link_libraries(
 	${Poco_DATA}
 	${Poco_DATA_SQLITE}
 	${Poco_DATA_ODBC}
-    sawtooth
 )
-add_dependencies(${LIBNAME} sawtooth)
 
 install(DIRECTORY include/moja
         DESTINATION include
