Added DisturbanceMonitor module - records the last-applied disturbance for the current pixel in each timestep. If no disturbance occurs in a timestep, the value is null. Makes it possible to answer questions like "What was the impact on <some indicator> in pixels disturbed by <some disturbance>?"

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -33,6 +33,7 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/cbmspinupdisturbancemodule.h
 	include/moja/modules/${PACKAGE}/cbmspinupsequencer.h
 	include/moja/modules/${PACKAGE}/componentbiomasscarboncurve.h
+	include/moja/modules/${PACKAGE}/disturbancemonitormodule.h
 	include/moja/modules/${PACKAGE}/esgymmodule.h
 	include/moja/modules/${PACKAGE}/esgymspinupsequencer.h
 	include/moja/modules/${PACKAGE}/foresttypeconfiguration.h	
@@ -94,6 +95,7 @@ set(MOJA_CBM_SOURCES
 	src/cbmspinupsequencer.cpp
     src/cbmtransitionrulesmodule.cpp
 	src/componentbiomasscarboncurve.cpp
+	src/disturbancemonitormodule.cpp
 	src/esgymmodule.cpp
 	src/esgymspinupsequencer.cpp
 	src/growthcurvetransform.cpp
