--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -72,6 +72,13 @@ if(Moja_FOUND)
 	link_directories(${Moja_LIBRARY_DIR})
 endif()
 
+# Libpqxx
+find_package(PQXX REQUIRED)
+if(PQXX_FOUND)
+    include_directories(${PQXX_INCLUDE_DIRECTORIES})
+	link_directories(${PQXX_LIBRARIES})
+endif()
+
 # OS detection
 message(STATUS "The compiler in use is ${CMAKE_CXX_COMPILER}.")
 message(STATUS "The compiler flags in use is ${CMAKE_CXX_FLAGS}.")
