Cleaned up LibPQXXWriter/PostgresWriter modules - both now use job ID instead of tile/block address to differentiate results aggregated by different workers.
Added missing libpq dependency in CMakeLists.txt.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -72,6 +72,12 @@ if(Moja_FOUND)
 	link_directories(${Moja_LIBRARY_DIR})
 endif()
 
+# Libpq
+find_package(Libpq REQUIRED)
+if(Libpq_FOUND)
+    include_directories(${LIBPQ_INCLUDE_PATH})
+endif()
+
 # Libpqxx
 find_package(PQXX REQUIRED)
 if(PQXX_FOUND)
