Updates to transition rules:   - can still be attached directly to disturbance events by ID   - optionally match transition rules by disturbance type and classifier set including wildcards in the same way growth curves are matched: the most specific classifier match is the transition rule that gets used for a particular disturbance type   - new reset age modes:     - absolute: the "classic" CBM behaviour - reset the stand age to a fixed value, or -1 = no change     - relative: add or subtract a specified number of years from the stand age, to a minimum of 0     - yield: calculate the new stand age based on the aboveground biomass remaining after disturbance and its closest match on the stand's yield curve (the new yield curve, if the stand's classifiers have transitioned)
** yield reset age mode not yet implemented, currently a placeholder.

--- a/Source/moja.modules.cbm/CMakeLists.txt
+++ b/Source/moja.modules.cbm/CMakeLists.txt
@@ -71,6 +71,7 @@ set(MOJA_CBM_HEADERS
 	include/moja/modules/${PACKAGE}/standcomponent.h
 	include/moja/modules/${PACKAGE}/standgrowthcurve.h
 	include/moja/modules/${PACKAGE}/standgrowthcurvefactory.h
+	include/moja/modules/${PACKAGE}/transitionruletransform.h
 	include/moja/modules/${PACKAGE}/treespecies.h
 	include/moja/modules/${PACKAGE}/treeyieldtable.h
 	include/moja/modules/${PACKAGE}/volumetobiomasscarbongrowth.h
@@ -131,6 +132,7 @@ set(MOJA_CBM_SOURCES
     src/standcomponent.cpp	
 	src/standgrowthcurve.cpp
 	src/standgrowthcurvefactory.cpp	
+	src/transitionruletransform.cpp
 	src/treespecies.cpp
 	src/treeyieldtable.cpp
 	src/volumetobiomasscarbongrowth.cpp
